Layout bug fix

--- a/www/style.css
+++ b/www/style.css
@@ -991,7 +991,7 @@ ul.comment-thread {
 }
 
 .comment-meta {
-	padding: 2px 48px 2px 10px;
+	padding: 2px 64px 2px 10px;
 	margin: 0 -1px;
 	border: none;
 }
